eks-network-policy-examples/advanced/policies/02-allow-ingress-from-samens.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: demo-app-allow-samens
spec:
  podSelector:
    matchLabels:
      app: demo-app
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: default
