eks-network-policy-examples/advanced/policies/09-allow-egress-to-ip.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: client-one-allow-egress-ip
spec:
  podSelector:
    matchLabels:
      app: client-one
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: demo-app
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
  - to:
    - ipBlock:
        cidr: 192.168.161.234/32
    ports:
    - port: 80
      protocol: TCP
